--- a/gestion/ofertas/index.html
+++ b/gestion/ofertas/index.html
@@ -185,6 +185,8 @@
         </select>
 
         <button type="button" onclick="guardarOferta()">Guardar Oferta</button>
+        <button type="button" onclick="window.location.href='generator.html'">📄 Generar PDF</button>
+
     </form>
 
 </body>
